# py-muse-wrappers

./: .gitignore  CLAUDE.md  CLAUDE_BEHAVIOR.md  EOC-202.CSV  LICENSE  README.md  device.py  dump_config.py  examples.py  panel.py  pyproject.toml  serialization.py  touchpad.py  user_code_test.py
common/: device.py
components/: button.py  component.py  keyboard.py  page.py
components/buttons/: buttons.py  commands.py
devices/: callbacks.py  device.py  touchpad.py
docs/: README.md  button_commands.txt  button_state_commands,txt  g5_guide.txt  muse_doc_extract.txt  muse_guide.txt  muse_thing_api.txt
old/: IMPLEMENTATION_SUMMARY.md  __init__.py  component_example.py  pages.py  render_example.py  test_dirty_tracking.py
src/py_muse_wrappers/common/: callbacks.py  device.py
src/py_muse_wrappers/touchpad/: button.py  component.py  keyboard.py  page.py  touchpad.py
tests/: conftest.py  test_button.py  test_config.CSV  test_user_code.py
touchpad/: button.py  component.py  keyboard.py  page.py  touchpad.py
